--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "next": "10.1.3",
+    "next-i18next": "^8.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "17.0.2",
+    "sass": "^1.32.8"
   }
 }
