--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",    
+    "build": "next build",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
@@ -14,6 +15,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.8"
+    "react-ionicons": "^4.2.0",
+    "sass": "^1.32.8",
+    "styled-components": "^5.2.3"
   }
 }
