--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.2",
     "react-ionicons": "^4.2.0",
+    "react-lottie": "^1.2.3",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3"
   }
