--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-ionicons": "^4.2.0",
     "react-lottie": "^1.2.3",
+    "react-sidebar": "^3.0.2",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3"
   }
